--- a/options.html
+++ b/options.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/inter-ui@3.7.0/inter.min.css"
     />
+    <link rel="shortcut icon" href="icon-64x64.png" />
     <style>
       html {
         font-size: 10px;
