revise approach to auth

--- a/src/options.html
+++ b/src/options.html
@@ -39,10 +39,11 @@
           <p id="message"></p>
         </div>
 
-        <div class="form">
+        <form class="form">
+          <div id="formcontent"></div>
           <button class="button subtle" id="clear">Logout</button>
-          <button class="button green" id="authenticate">Login</button>
-        </div>
+          <button class="button green" id="authenticate" type="submit">Login</button>
+        </form>
       </div>
     </main>
     <footer>
@@ -51,8 +52,8 @@
         Richey in Seattle, WA.
         <br />
         Copyright © 2020. All rights reserved.
-        <a href="https://convo.events/privacy">Privacy policy</a>.
-        <a href="https://convo.events/terms">Terms of service</a>.
+        <a href="https://convo.events/privacy" target="_blank">Privacy policy</a>.
+        <a href="https://convo.events/terms" target="_blank">Terms of service</a>.
       </p>
     </footer>
     <script src="options.js"></script>
