bugfix where listener was on button instead of form

--- a/src/options.html
+++ b/src/options.html
@@ -39,7 +39,7 @@
           <p id="message"></p>
         </div>
 
-        <form class="form">
+        <form class="form" id="form">
           <div id="formcontent"></div>
           <button class="button subtle" id="clear">Logout</button>
           <button class="button green" id="authenticate" type="submit">Login</button>
